WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128208
IDB: indexeddb/mozilla/add-twice-failure.html fails
https://bugs.webkit.org/show_bug.cgi?id=128208
Summary
IDB: indexeddb/mozilla/add-twice-failure.html fails
Brady Eidson
Reported
2014-02-04 13:37:19 PST
IDB: indexeddb/mozilla/add-twice-failure.html fails This is because: -Adding a record with an already stored key succeeds, when it should fail. -That failure error should propagate back to the request with the appropriate error code.
Attachments
Patch v1
(18.95 KB, patch)
2014-02-04 15:13 PST
,
Brady Eidson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-02-04 13:37:38 PST
<
rdar://problem/15982569
>
Brady Eidson
Comment 2
2014-02-04 15:13:39 PST
Created
attachment 223165
[details]
Patch v1
Brady Eidson
Comment 3
2014-02-04 16:22:26 PST
http://trac.webkit.org/changeset/163417
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug